@@ -6,6 +6,7 @@
 * Moneris: Add verify [anellis]
 * Jetpay: Add support for origin field[anellis]
 * Jetpay: Don't default origin field [duff]
+* Stripe: Support connect-agent metadata [rwdaigle]
 
 == Version 1.58.0 (March 1, 2016)
 * Move Electron check out of CreditCard into CreditCardMethods [ThereExistsX]
